--- a/LearningWeb/web/index.xhtml
+++ b/LearningWeb/web/index.xhtml
@@ -1,26 +1,22 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-<f:loadBundle basename="java.resources.application" var="msg" />
+<!--<f:loadBundle basename="application" var="msg"/>-->
 
-<head>
-<title><h:outputText value="#{msg.welcomeTitle}" /></title>
-</head>
+<h:head>
+    <title>#{msg.welcomeTitle}</title>
+</h:head>
 
-<body>
-	<h3>
-		<h:outputText value="#{msg.welcomeHeading}" />
-	</h3>
-	<p>
-		<h:outputText value="#{msg.welcomeMessage}" />
-	</p>
-	<h:form>
-		<h:commandButton action="#{managedBean1.doSomething}" value="lol"/>
-	</h:form>
-</body>
+<h:body>
+    <h3>#{msg.welcomeHeading}</h3>
+    <p>#{msg.welcomeMessage}</p>
+    <h:form>
+        <h:commandButton action="login2" value="Authenticate"/>
+    </h:form>
+</h:body>
 </html>
